# DeviceOptimizeHelper

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  classes.dex  gradle.properties  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: DeviceOptimizeHelper_v1.0.2.apk  output-metadata.json
app/src/androidTest/java/ma/DeviceOptimizeHelper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/accounts/: Account.aidl  IAccountManager.aidl  IAccountManagerResponse.aidl
app/src/main/aidl/android/app/: IActivityController.aidl  IActivityManager.aidl  IApplicationThread.aidl  IProcessObserver.aidl  IServiceConnection.aidl
app/src/main/aidl/android/app/admin/: IDevicePolicyManager.aidl  SystemUpdatePolicy.aidl
app/src/main/aidl/android/content/: ComponentName.aidl  IContentService.aidl  IIntentReceiver.aidl  Intent.aidl
app/src/main/aidl/android/content/pm/: ChangedPackages.aidl  IOnAppsChangedListener.aidl  IPackageManager.aidl  ParceledListSlice.aidl  SuspendDialogInfo.aidl
app/src/main/aidl/android/os/: Bundle.aidl  IBinder.aidl  IDeviceIdleController.aidl  RemoteCallback.aidl  UserHandle.aidl
app/src/main/aidl/com/ma/enterprisemodepolicymanager/: IDeviceOptService.aidl  IUserService.aidl
app/src/main/aidl/com/miui/enterprise/: IEnterpriseManager.aidl
app/src/main/aidl/ma/DeviceOptimizeHelper/: IDeviceOptService.aidl  IUserService.aidl
app/src/main/cpp/: DeviceOptimizeHelper.cpp
app/src/main/cpp/include/: JNIEnvPtr.h
app/src/main/java/android/content/: IContentProvider.java
app/src/main/java/android/content/pm/: ParceledListSlice.java  SuspendDialogInfo.java
app/src/main/java/android/util/: Singleton.java
app/src/main/java/com/ma/enterprisemodepolicymanager/: Main.java  (+2 more)
app/src/main/java/ma/DeviceOptimizeHelper/: BinderContainer.java  Main.java  MainActivity.java  SettingsActivity.java
app/src/main/res/drawable/: ic_marker.xml  ic_marker_active.xml  ic_marker_inactive.xml  miuix_appcompat_intent_arrow_right.xml
app/src/main/res/layout/: activity_crash_info.xml  activity_splash.xml  cyberhoop_activity.xml  fragment_ad_mob.xml  item_timeline.xml  m3_icon_frame.xml  m3_preference.xml  m3_preference_category.xml  main_activity.xml  settings_activity.xml
app/src/main/res/layout-v34/: item_timeline.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  config.xml  dimens.xml  strings.xml  styles_preference.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/ma/DeviceOptimizeHelper/: ExampleUnitTest.java
(+153 files in other folders)
